LexerParser/LexerParser_Oct _12_3pm/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> update_statement
Rule 2     statement -> select_statement
Rule 3     statement -> delete_statement
Rule 4     update_statement -> UPDATE ID SET set_clause_list EOL
Rule 5     update_statement -> UPDATE ID SET set_clause_list WHERE search_condition EOL
Rule 6     select_statement -> SELECT select_columns FROM id_list EOL
Rule 7     select_statement -> SELECT select_columns FROM id_list join_clause EOL
Rule 8     select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL
Rule 9     select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
Rule 10    delete_statement -> DELETE FROM ID EOL
Rule 11    delete_statement -> DELETE FROM ID WHERE search_condition EOL
Rule 12    select_columns -> ALL
Rule 13    select_columns -> id_list
Rule 14    set_clause_list -> ID EQ literal
Rule 15    set_clause_list -> ID EQ literal COMMA set_clause_list
Rule 16    join_clause -> NATURAL JOIN ID
Rule 17    join_clause -> NATURAL JOIN ID join_clause
Rule 18    join_clause -> JOIN ID
Rule 19    join_clause -> join_list ON ID EQ ID
Rule 20    join_clause -> join_list ON ID EQ literal
Rule 21    join_clause -> join_list ON ID EQ ID join_clause
Rule 22    join_clause -> join_list ON ID EQ ID join_search_condition
Rule 23    join_clause -> join_list ON ID DOT ID EQ ID DOT ID
Rule 24    join_clause -> join_list ON ID DOT ID EQ ID DOT ID join_clause
Rule 25    join_clause -> join_list ON ID DOT ID EQ ID DOT ID join_search_condition
Rule 26    join_list -> JOIN ID
Rule 27    join_list -> JOIN ID join_list
Rule 28    join_search_condition -> AND join_search_condition
Rule 29    join_search_condition -> OR join_search_condition
Rule 30    join_search_condition -> LPAREN join_search_condition RPAREN
Rule 31    join_search_condition -> comparison_predicate
Rule 32    search_condition -> search_condition OR search_condition
Rule 33    search_condition -> search_condition AND search_condition
Rule 34    search_condition -> LPAREN search_condition RPAREN
Rule 35    search_condition -> comparison_predicate
Rule 36    comparison_predicate -> value comp_op value
Rule 37    comp_op -> EQ
Rule 38    comp_op -> NEQ
Rule 39    comp_op -> GT
Rule 40    comp_op -> LT
Rule 41    id_list -> ID
Rule 42    id_list -> ID DOT ID
Rule 43    id_list -> id_list COMMA ID
Rule 44    id_list -> id_list COMMA ID DOT ID
Rule 45    inner_select_statement -> SELECT select_columns FROM id_list
Rule 46    inner_select_statement -> SELECT select_columns FROM id_list join_clause
Rule 47    inner_select_statement -> SELECT select_columns FROM id_list WHERE search_condition
Rule 48    inner_select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition
Rule 49    value -> ID
Rule 50    value -> ID DOT ID
Rule 51    value -> literal
Rule 52    value -> LPAREN inner_select_statement RPAREN
Rule 53    literal -> INT
Rule 54    literal -> DOUBLE
Rule 55    literal -> STRING

Terminals, with rules where they appear

ALL                  : 12
AND                  : 28 33
COMMA                : 15 43 44
DELETE               : 10 11
DOT                  : 23 23 24 24 25 25 42 44 50
DOUBLE               : 54
EOL                  : 4 5 6 7 8 9 10 11
EQ                   : 14 15 19 20 21 22 23 24 25 37
FROM                 : 6 7 8 9 10 11 45 46 47 48
GT                   : 39
ID                   : 4 5 10 11 14 15 16 17 18 19 19 20 21 21 22 22 23 23 23 23 24 24 24 24 25 25 25 25 26 27 41 42 42 43 44 44 49 50 50
INT                  : 53
JOIN                 : 16 17 18 26 27
LPAREN               : 30 34 52
LT                   : 40
NATURAL              : 16 17
NEQ                  : 38
ON                   : 19 20 21 22 23 24 25
OR                   : 29 32
RPAREN               : 30 34 52
SELECT               : 6 7 8 9 45 46 47 48
SET                  : 4 5
STRING               : 55
UPDATE               : 4 5
WHERE                : 5 8 9 11 47 48
error                : 

Nonterminals, with rules where they appear

comp_op              : 36
comparison_predicate : 31 35
delete_statement     : 3
id_list              : 6 7 8 9 13 43 44 45 46 47 48
inner_select_statement : 52
join_clause          : 7 9 17 21 24 46 48
join_list            : 19 20 21 22 23 24 25 27
join_search_condition : 22 25 28 29 30
literal              : 14 15 20 51
search_condition     : 5 8 9 11 32 32 33 33 34 47 48
select_columns       : 6 7 8 9 45 46 47 48
select_statement     : 2
set_clause_list      : 4 5 15
statement            : 0
update_statement     : 1
value                : 36 36

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . update_statement
    (2) statement -> . select_statement
    (3) statement -> . delete_statement
    (4) update_statement -> . UPDATE ID SET set_clause_list EOL
    (5) update_statement -> . UPDATE ID SET set_clause_list WHERE search_condition EOL
    (6) select_statement -> . SELECT select_columns FROM id_list EOL
    (7) select_statement -> . SELECT select_columns FROM id_list join_clause EOL
    (8) select_statement -> . SELECT select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition EOL
    (10) delete_statement -> . DELETE FROM ID EOL
    (11) delete_statement -> . DELETE FROM ID WHERE search_condition EOL

    UPDATE          shift and go to state 4
    SELECT          shift and go to state 2
    DELETE          shift and go to state 7

    delete_statement               shift and go to state 5
    statement                      shift and go to state 1
    update_statement               shift and go to state 6
    select_statement               shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (6) select_statement -> SELECT . select_columns FROM id_list EOL
    (7) select_statement -> SELECT . select_columns FROM id_list join_clause EOL
    (8) select_statement -> SELECT . select_columns FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition EOL
    (12) select_columns -> . ALL
    (13) select_columns -> . id_list
    (41) id_list -> . ID
    (42) id_list -> . ID DOT ID
    (43) id_list -> . id_list COMMA ID
    (44) id_list -> . id_list COMMA ID DOT ID

    ALL             shift and go to state 9
    ID              shift and go to state 10

    select_columns                 shift and go to state 11
    id_list                        shift and go to state 8

state 3

    (2) statement -> select_statement .

    $end            reduce using rule 2 (statement -> select_statement .)


state 4

    (4) update_statement -> UPDATE . ID SET set_clause_list EOL
    (5) update_statement -> UPDATE . ID SET set_clause_list WHERE search_condition EOL

    ID              shift and go to state 12


state 5

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 6

    (1) statement -> update_statement .

    $end            reduce using rule 1 (statement -> update_statement .)


state 7

    (10) delete_statement -> DELETE . FROM ID EOL
    (11) delete_statement -> DELETE . FROM ID WHERE search_condition EOL

    FROM            shift and go to state 13


state 8

    (13) select_columns -> id_list .
    (43) id_list -> id_list . COMMA ID
    (44) id_list -> id_list . COMMA ID DOT ID

    FROM            reduce using rule 13 (select_columns -> id_list .)
    COMMA           shift and go to state 14


state 9

    (12) select_columns -> ALL .

    FROM            reduce using rule 12 (select_columns -> ALL .)


state 10

    (41) id_list -> ID .
    (42) id_list -> ID . DOT ID

    EOL             reduce using rule 41 (id_list -> ID .)
    WHERE           reduce using rule 41 (id_list -> ID .)
    COMMA           reduce using rule 41 (id_list -> ID .)
    NATURAL         reduce using rule 41 (id_list -> ID .)
    JOIN            reduce using rule 41 (id_list -> ID .)
    FROM            reduce using rule 41 (id_list -> ID .)
    RPAREN          reduce using rule 41 (id_list -> ID .)
    DOT             shift and go to state 15


state 11

    (6) select_statement -> SELECT select_columns . FROM id_list EOL
    (7) select_statement -> SELECT select_columns . FROM id_list join_clause EOL
    (8) select_statement -> SELECT select_columns . FROM id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns . FROM id_list join_clause WHERE search_condition EOL

    FROM            shift and go to state 16


state 12

    (4) update_statement -> UPDATE ID . SET set_clause_list EOL
    (5) update_statement -> UPDATE ID . SET set_clause_list WHERE search_condition EOL

    SET             shift and go to state 17


state 13

    (10) delete_statement -> DELETE FROM . ID EOL
    (11) delete_statement -> DELETE FROM . ID WHERE search_condition EOL

    ID              shift and go to state 18


state 14

    (43) id_list -> id_list COMMA . ID
    (44) id_list -> id_list COMMA . ID DOT ID

    ID              shift and go to state 19


state 15

    (42) id_list -> ID DOT . ID

    ID              shift and go to state 20


state 16

    (6) select_statement -> SELECT select_columns FROM . id_list EOL
    (7) select_statement -> SELECT select_columns FROM . id_list join_clause EOL
    (8) select_statement -> SELECT select_columns FROM . id_list WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM . id_list join_clause WHERE search_condition EOL
    (41) id_list -> . ID
    (42) id_list -> . ID DOT ID
    (43) id_list -> . id_list COMMA ID
    (44) id_list -> . id_list COMMA ID DOT ID

    ID              shift and go to state 10

    id_list                        shift and go to state 21

state 17

    (4) update_statement -> UPDATE ID SET . set_clause_list EOL
    (5) update_statement -> UPDATE ID SET . set_clause_list WHERE search_condition EOL
    (14) set_clause_list -> . ID EQ literal
    (15) set_clause_list -> . ID EQ literal COMMA set_clause_list

    ID              shift and go to state 22

    set_clause_list                shift and go to state 23

state 18

    (10) delete_statement -> DELETE FROM ID . EOL
    (11) delete_statement -> DELETE FROM ID . WHERE search_condition EOL

    EOL             shift and go to state 25
    WHERE           shift and go to state 24


state 19

    (43) id_list -> id_list COMMA ID .
    (44) id_list -> id_list COMMA ID . DOT ID

    EOL             reduce using rule 43 (id_list -> id_list COMMA ID .)
    WHERE           reduce using rule 43 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 43 (id_list -> id_list COMMA ID .)
    NATURAL         reduce using rule 43 (id_list -> id_list COMMA ID .)
    JOIN            reduce using rule 43 (id_list -> id_list COMMA ID .)
    FROM            reduce using rule 43 (id_list -> id_list COMMA ID .)
    RPAREN          reduce using rule 43 (id_list -> id_list COMMA ID .)
    DOT             shift and go to state 26


state 20

    (42) id_list -> ID DOT ID .

    EOL             reduce using rule 42 (id_list -> ID DOT ID .)
    WHERE           reduce using rule 42 (id_list -> ID DOT ID .)
    COMMA           reduce using rule 42 (id_list -> ID DOT ID .)
    NATURAL         reduce using rule 42 (id_list -> ID DOT ID .)
    JOIN            reduce using rule 42 (id_list -> ID DOT ID .)
    FROM            reduce using rule 42 (id_list -> ID DOT ID .)
    RPAREN          reduce using rule 42 (id_list -> ID DOT ID .)


state 21

    (6) select_statement -> SELECT select_columns FROM id_list . EOL
    (7) select_statement -> SELECT select_columns FROM id_list . join_clause EOL
    (8) select_statement -> SELECT select_columns FROM id_list . WHERE search_condition EOL
    (9) select_statement -> SELECT select_columns FROM id_list . join_clause WHERE search_condition EOL
    (43) id_list -> id_list . COMMA ID
    (44) id_list -> id_list . COMMA ID DOT ID
    (16) join_clause -> . NATURAL JOIN ID
    (17) join_clause -> . NATURAL JOIN ID join_clause
    (18) join_clause -> . JOIN ID
    (19) join_clause -> . join_list ON ID EQ ID
    (20) join_clause -> . join_list ON ID EQ literal
    (21) join_clause -> . join_list ON ID EQ ID join_clause
    (22) join_clause -> . join_list ON ID EQ ID join_search_condition
    (23) join_clause -> . join_list ON ID DOT ID EQ ID DOT ID
    (24) join_clause -> . join_list ON ID DOT ID EQ ID DOT ID join_clause
    (25) join_clause -> . join_list ON ID DOT ID EQ ID DOT ID join_search_condition
    (26) join_list -> . JOIN ID
    (27) join_list -> . JOIN ID join_list

    EOL             shift and go to state 30
    WHERE           shift and go to state 28
    COMMA           shift and go to state 14
    NATURAL         shift and go to state 32
    JOIN            shift and go to state 29

    join_clause                    shift and go to state 27
    join_list                      shift and go to state 31

state 22

    (14) set_clause_list -> ID . EQ literal
    (15) set_clause_list -> ID . EQ literal COMMA set_clause_list

    EQ              shift and go to state 33


state 23

    (4) update_statement -> UPDATE ID SET set_clause_list . EOL
    (5) update_statement -> UPDATE ID SET set_clause_list . WHERE search_condition EOL

    EOL             shift and go to state 35
    WHERE           shift and go to state 34


state 24

    (11) delete_statement -> DELETE FROM ID WHERE . search_condition EOL
    (32) search_condition -> . search_condition OR search_condition
    (33) search_condition -> . search_condition AND search_condition
    (34) search_condition -> . LPAREN search_condition RPAREN
    (35) search_condition -> . comparison_predicate
    (36) comparison_predicate -> . value comp_op value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    LPAREN          shift and go to state 42
    ID              shift and go to state 39
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    search_condition               shift and go to state 36
    literal                        shift and go to state 40
    comparison_predicate           shift and go to state 41
    value                          shift and go to state 44

state 25

    (10) delete_statement -> DELETE FROM ID EOL .

    $end            reduce using rule 10 (delete_statement -> DELETE FROM ID EOL .)


state 26

    (44) id_list -> id_list COMMA ID DOT . ID

    ID              shift and go to state 45


state 27

    (7) select_statement -> SELECT select_columns FROM id_list join_clause . EOL
    (9) select_statement -> SELECT select_columns FROM id_list join_clause . WHERE search_condition EOL

    EOL             shift and go to state 47
    WHERE           shift and go to state 46


state 28

    (8) select_statement -> SELECT select_columns FROM id_list WHERE . search_condition EOL
    (32) search_condition -> . search_condition OR search_condition
    (33) search_condition -> . search_condition AND search_condition
    (34) search_condition -> . LPAREN search_condition RPAREN
    (35) search_condition -> . comparison_predicate
    (36) comparison_predicate -> . value comp_op value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    LPAREN          shift and go to state 42
    ID              shift and go to state 39
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    search_condition               shift and go to state 48
    literal                        shift and go to state 40
    comparison_predicate           shift and go to state 41
    value                          shift and go to state 44

state 29

    (18) join_clause -> JOIN . ID
    (26) join_list -> JOIN . ID
    (27) join_list -> JOIN . ID join_list

    ID              shift and go to state 49


state 30

    (6) select_statement -> SELECT select_columns FROM id_list EOL .

    $end            reduce using rule 6 (select_statement -> SELECT select_columns FROM id_list EOL .)


state 31

    (19) join_clause -> join_list . ON ID EQ ID
    (20) join_clause -> join_list . ON ID EQ literal
    (21) join_clause -> join_list . ON ID EQ ID join_clause
    (22) join_clause -> join_list . ON ID EQ ID join_search_condition
    (23) join_clause -> join_list . ON ID DOT ID EQ ID DOT ID
    (24) join_clause -> join_list . ON ID DOT ID EQ ID DOT ID join_clause
    (25) join_clause -> join_list . ON ID DOT ID EQ ID DOT ID join_search_condition

    ON              shift and go to state 50


state 32

    (16) join_clause -> NATURAL . JOIN ID
    (17) join_clause -> NATURAL . JOIN ID join_clause

    JOIN            shift and go to state 51


state 33

    (14) set_clause_list -> ID EQ . literal
    (15) set_clause_list -> ID EQ . literal COMMA set_clause_list
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    literal                        shift and go to state 52

state 34

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE . search_condition EOL
    (32) search_condition -> . search_condition OR search_condition
    (33) search_condition -> . search_condition AND search_condition
    (34) search_condition -> . LPAREN search_condition RPAREN
    (35) search_condition -> . comparison_predicate
    (36) comparison_predicate -> . value comp_op value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    LPAREN          shift and go to state 42
    ID              shift and go to state 39
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    search_condition               shift and go to state 53
    literal                        shift and go to state 40
    comparison_predicate           shift and go to state 41
    value                          shift and go to state 44

state 35

    (4) update_statement -> UPDATE ID SET set_clause_list EOL .

    $end            reduce using rule 4 (update_statement -> UPDATE ID SET set_clause_list EOL .)


state 36

    (11) delete_statement -> DELETE FROM ID WHERE search_condition . EOL
    (32) search_condition -> search_condition . OR search_condition
    (33) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 56
    OR              shift and go to state 55
    AND             shift and go to state 54


state 37

    (55) literal -> STRING .

    EQ              reduce using rule 55 (literal -> STRING .)
    NEQ             reduce using rule 55 (literal -> STRING .)
    GT              reduce using rule 55 (literal -> STRING .)
    LT              reduce using rule 55 (literal -> STRING .)
    EOL             reduce using rule 55 (literal -> STRING .)
    WHERE           reduce using rule 55 (literal -> STRING .)
    RPAREN          reduce using rule 55 (literal -> STRING .)
    COMMA           reduce using rule 55 (literal -> STRING .)
    OR              reduce using rule 55 (literal -> STRING .)
    AND             reduce using rule 55 (literal -> STRING .)


state 38

    (53) literal -> INT .

    EQ              reduce using rule 53 (literal -> INT .)
    NEQ             reduce using rule 53 (literal -> INT .)
    GT              reduce using rule 53 (literal -> INT .)
    LT              reduce using rule 53 (literal -> INT .)
    EOL             reduce using rule 53 (literal -> INT .)
    WHERE           reduce using rule 53 (literal -> INT .)
    RPAREN          reduce using rule 53 (literal -> INT .)
    COMMA           reduce using rule 53 (literal -> INT .)
    OR              reduce using rule 53 (literal -> INT .)
    AND             reduce using rule 53 (literal -> INT .)


state 39

    (49) value -> ID .
    (50) value -> ID . DOT ID

    EQ              reduce using rule 49 (value -> ID .)
    NEQ             reduce using rule 49 (value -> ID .)
    GT              reduce using rule 49 (value -> ID .)
    LT              reduce using rule 49 (value -> ID .)
    EOL             reduce using rule 49 (value -> ID .)
    OR              reduce using rule 49 (value -> ID .)
    AND             reduce using rule 49 (value -> ID .)
    RPAREN          reduce using rule 49 (value -> ID .)
    WHERE           reduce using rule 49 (value -> ID .)
    DOT             shift and go to state 57


state 40

    (51) value -> literal .

    EQ              reduce using rule 51 (value -> literal .)
    NEQ             reduce using rule 51 (value -> literal .)
    GT              reduce using rule 51 (value -> literal .)
    LT              reduce using rule 51 (value -> literal .)
    EOL             reduce using rule 51 (value -> literal .)
    OR              reduce using rule 51 (value -> literal .)
    AND             reduce using rule 51 (value -> literal .)
    RPAREN          reduce using rule 51 (value -> literal .)
    WHERE           reduce using rule 51 (value -> literal .)


state 41

    (35) search_condition -> comparison_predicate .

    EOL             reduce using rule 35 (search_condition -> comparison_predicate .)
    OR              reduce using rule 35 (search_condition -> comparison_predicate .)
    AND             reduce using rule 35 (search_condition -> comparison_predicate .)
    RPAREN          reduce using rule 35 (search_condition -> comparison_predicate .)


state 42

    (34) search_condition -> LPAREN . search_condition RPAREN
    (52) value -> LPAREN . inner_select_statement RPAREN
    (32) search_condition -> . search_condition OR search_condition
    (33) search_condition -> . search_condition AND search_condition
    (34) search_condition -> . LPAREN search_condition RPAREN
    (35) search_condition -> . comparison_predicate
    (45) inner_select_statement -> . SELECT select_columns FROM id_list
    (46) inner_select_statement -> . SELECT select_columns FROM id_list join_clause
    (47) inner_select_statement -> . SELECT select_columns FROM id_list WHERE search_condition
    (48) inner_select_statement -> . SELECT select_columns FROM id_list join_clause WHERE search_condition
    (36) comparison_predicate -> . value comp_op value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    LPAREN          shift and go to state 42
    SELECT          shift and go to state 60
    ID              shift and go to state 39
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    search_condition               shift and go to state 58
    literal                        shift and go to state 40
    inner_select_statement         shift and go to state 59
    comparison_predicate           shift and go to state 41
    value                          shift and go to state 44

state 43

    (54) literal -> DOUBLE .

    EQ              reduce using rule 54 (literal -> DOUBLE .)
    NEQ             reduce using rule 54 (literal -> DOUBLE .)
    GT              reduce using rule 54 (literal -> DOUBLE .)
    LT              reduce using rule 54 (literal -> DOUBLE .)
    EOL             reduce using rule 54 (literal -> DOUBLE .)
    WHERE           reduce using rule 54 (literal -> DOUBLE .)
    RPAREN          reduce using rule 54 (literal -> DOUBLE .)
    COMMA           reduce using rule 54 (literal -> DOUBLE .)
    OR              reduce using rule 54 (literal -> DOUBLE .)
    AND             reduce using rule 54 (literal -> DOUBLE .)


state 44

    (36) comparison_predicate -> value . comp_op value
    (37) comp_op -> . EQ
    (38) comp_op -> . NEQ
    (39) comp_op -> . GT
    (40) comp_op -> . LT

    EQ              shift and go to state 64
    NEQ             shift and go to state 65
    GT              shift and go to state 63
    LT              shift and go to state 62

    comp_op                        shift and go to state 61

state 45

    (44) id_list -> id_list COMMA ID DOT ID .

    EOL             reduce using rule 44 (id_list -> id_list COMMA ID DOT ID .)
    WHERE           reduce using rule 44 (id_list -> id_list COMMA ID DOT ID .)
    COMMA           reduce using rule 44 (id_list -> id_list COMMA ID DOT ID .)
    NATURAL         reduce using rule 44 (id_list -> id_list COMMA ID DOT ID .)
    JOIN            reduce using rule 44 (id_list -> id_list COMMA ID DOT ID .)
    FROM            reduce using rule 44 (id_list -> id_list COMMA ID DOT ID .)
    RPAREN          reduce using rule 44 (id_list -> id_list COMMA ID DOT ID .)


state 46

    (9) select_statement -> SELECT select_columns FROM id_list join_clause WHERE . search_condition EOL
    (32) search_condition -> . search_condition OR search_condition
    (33) search_condition -> . search_condition AND search_condition
    (34) search_condition -> . LPAREN search_condition RPAREN
    (35) search_condition -> . comparison_predicate
    (36) comparison_predicate -> . value comp_op value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    LPAREN          shift and go to state 42
    ID              shift and go to state 39
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    search_condition               shift and go to state 66
    literal                        shift and go to state 40
    comparison_predicate           shift and go to state 41
    value                          shift and go to state 44

state 47

    (7) select_statement -> SELECT select_columns FROM id_list join_clause EOL .

    $end            reduce using rule 7 (select_statement -> SELECT select_columns FROM id_list join_clause EOL .)


state 48

    (8) select_statement -> SELECT select_columns FROM id_list WHERE search_condition . EOL
    (32) search_condition -> search_condition . OR search_condition
    (33) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 67
    OR              shift and go to state 55
    AND             shift and go to state 54


state 49

    (18) join_clause -> JOIN ID .
    (26) join_list -> JOIN ID .
    (27) join_list -> JOIN ID . join_list
    (26) join_list -> . JOIN ID
    (27) join_list -> . JOIN ID join_list

    EOL             reduce using rule 18 (join_clause -> JOIN ID .)
    WHERE           reduce using rule 18 (join_clause -> JOIN ID .)
    RPAREN          reduce using rule 18 (join_clause -> JOIN ID .)
    ON              reduce using rule 26 (join_list -> JOIN ID .)
    JOIN            shift and go to state 69

    join_list                      shift and go to state 68

state 50

    (19) join_clause -> join_list ON . ID EQ ID
    (20) join_clause -> join_list ON . ID EQ literal
    (21) join_clause -> join_list ON . ID EQ ID join_clause
    (22) join_clause -> join_list ON . ID EQ ID join_search_condition
    (23) join_clause -> join_list ON . ID DOT ID EQ ID DOT ID
    (24) join_clause -> join_list ON . ID DOT ID EQ ID DOT ID join_clause
    (25) join_clause -> join_list ON . ID DOT ID EQ ID DOT ID join_search_condition

    ID              shift and go to state 70


state 51

    (16) join_clause -> NATURAL JOIN . ID
    (17) join_clause -> NATURAL JOIN . ID join_clause

    ID              shift and go to state 71


state 52

    (14) set_clause_list -> ID EQ literal .
    (15) set_clause_list -> ID EQ literal . COMMA set_clause_list

    EOL             reduce using rule 14 (set_clause_list -> ID EQ literal .)
    WHERE           reduce using rule 14 (set_clause_list -> ID EQ literal .)
    COMMA           shift and go to state 72


state 53

    (5) update_statement -> UPDATE ID SET set_clause_list WHERE search_condition . EOL
    (32) search_condition -> search_condition . OR search_condition
    (33) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 73
    OR              shift and go to state 55
    AND             shift and go to state 54


state 54

    (33) search_condition -> search_condition AND . search_condition
    (32) search_condition -> . search_condition OR search_condition
    (33) search_condition -> . search_condition AND search_condition
    (34) search_condition -> . LPAREN search_condition RPAREN
    (35) search_condition -> . comparison_predicate
    (36) comparison_predicate -> . value comp_op value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    LPAREN          shift and go to state 42
    ID              shift and go to state 39
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    search_condition               shift and go to state 74
    literal                        shift and go to state 40
    comparison_predicate           shift and go to state 41
    value                          shift and go to state 44

state 55

    (32) search_condition -> search_condition OR . search_condition
    (32) search_condition -> . search_condition OR search_condition
    (33) search_condition -> . search_condition AND search_condition
    (34) search_condition -> . LPAREN search_condition RPAREN
    (35) search_condition -> . comparison_predicate
    (36) comparison_predicate -> . value comp_op value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    LPAREN          shift and go to state 42
    ID              shift and go to state 39
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    search_condition               shift and go to state 75
    literal                        shift and go to state 40
    comparison_predicate           shift and go to state 41
    value                          shift and go to state 44

state 56

    (11) delete_statement -> DELETE FROM ID WHERE search_condition EOL .

    $end            reduce using rule 11 (delete_statement -> DELETE FROM ID WHERE search_condition EOL .)


state 57

    (50) value -> ID DOT . ID

    ID              shift and go to state 76


state 58

    (34) search_condition -> LPAREN search_condition . RPAREN
    (32) search_condition -> search_condition . OR search_condition
    (33) search_condition -> search_condition . AND search_condition

    RPAREN          shift and go to state 77
    OR              shift and go to state 55
    AND             shift and go to state 54


state 59

    (52) value -> LPAREN inner_select_statement . RPAREN

    RPAREN          shift and go to state 78


state 60

    (45) inner_select_statement -> SELECT . select_columns FROM id_list
    (46) inner_select_statement -> SELECT . select_columns FROM id_list join_clause
    (47) inner_select_statement -> SELECT . select_columns FROM id_list WHERE search_condition
    (48) inner_select_statement -> SELECT . select_columns FROM id_list join_clause WHERE search_condition
    (12) select_columns -> . ALL
    (13) select_columns -> . id_list
    (41) id_list -> . ID
    (42) id_list -> . ID DOT ID
    (43) id_list -> . id_list COMMA ID
    (44) id_list -> . id_list COMMA ID DOT ID

    ALL             shift and go to state 9
    ID              shift and go to state 10

    select_columns                 shift and go to state 79
    id_list                        shift and go to state 8

state 61

    (36) comparison_predicate -> value comp_op . value
    (49) value -> . ID
    (50) value -> . ID DOT ID
    (51) value -> . literal
    (52) value -> . LPAREN inner_select_statement RPAREN
    (53) literal -> . INT
    (54) literal -> . DOUBLE
    (55) literal -> . STRING

    ID              shift and go to state 39
    LPAREN          shift and go to state 80
    INT             shift and go to state 38
    DOUBLE          shift and go to state 43
    STRING          shift and go to state 37

    literal                        shift and go to state 40
    value                          shift and go to state 81

state 62

    (40) comp_op -> LT .

    ID              reduce using rule 40 (comp_op -> LT .)
    LPAREN          reduce using rule 40 (comp_op -> LT .)
    INT             reduce using rule 40 (comp_op -> LT .)
    DOUBLE          reduce using rule 40 (comp_op -> LT .)
    STRING          reduce using rule 40 (comp_op -> LT .)


state 63

    (39) comp_op -> GT .

    ID              reduce using rule 39 (comp_op -> GT .)
    LPAREN          reduce using rule 39 (comp_op -> GT .)
    INT             reduce using rule 39 (comp_op -> GT .)
    DOUBLE          reduce using rule 39 (comp_op -> GT .)
    STRING          reduce using rule 39 (comp_op -> GT .)


state 64

    (37) comp_op -> EQ .

    ID              reduce using rule 37 (comp_op -> EQ .)
    LPAREN          reduce using rule 37 (comp_op -> EQ .)
    INT             reduce using rule 37 (comp_op -> EQ .)
    DOUBLE          reduce using rule 37 (comp_op -> EQ .)
    STRING          reduce using rule 37 (comp_op -> EQ .)


state 65

    (38) comp_op -> NEQ .

    ID              reduce using rule 38 (comp_op -> NEQ .)
    LPAREN          reduce using rule 38 (comp_op -> NEQ .)
    INT             reduce using rule 38 (comp_op -> NEQ .)
    DOUBLE          reduce using rule 38 (comp_op -> NEQ .)
    STRING          reduce using rule 38 (comp_op -> NEQ .)


state 66

    (9) select_statement -> SELECT select_columns FROM id_list join_clause WHERE search_condition . EOL
    (32) search_condition -> search_condition . OR search_condition
    (33) search_condition -> search_condition . AND search_condition

    EOL             shift and go to state 82
    OR              shift and go to state 55
    AND             shift and go to state 54


state 67

    (8) select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL .

    $end            reduce using rule 8 (select_statement -> SELECT select_columns FROM id_list WHERE search_condition EOL .)


state 68

    (27) join_list -> JOIN ID join_list .

    ON              reduce using rule 27 (join_list -> JOIN ID join_list .)


state 69

    (26) join_list -> JOIN . ID
    (27) join_list -> JOIN . ID join_list

    ID              shift and go to state 83


state 70

    (19) join_clause -> join_list ON ID . EQ ID
    (20) join_clause -> join_list ON ID . EQ literal
    (21) join_clause -> join_list ON ID . EQ ID join_clause
    (22) join_clause -> join_list ON ID . EQ ID join_search_condition
    (23) join_clause -> join_list ON ID . DOT ID EQ ID DOT ID
    (24) join_clause -> join_list ON ID . DOT ID EQ ID DOT ID join_clause
    (25) join_clause -> join_list ON ID . DOT ID EQ ID DOT ID join_search_condition

    EQ              shift and go to state 85
    DOT             shift and go to state 84


state 71
